--- a/src/app/components/patient-history/patient-history.component.html
+++ b/src/app/components/patient-history/patient-history.component.html
@@ -24,7 +24,7 @@
 					<td class="col-md-3">
 						<div class="d-flex align-items-center">
 							<div class="ms-3">
-								<p class="fw-bold mb-0">{{appt.specialist.firstName}} {{appt.specialist.lastName}}</p>
+								<p class="fw-bold mb-0">{{appt.specialist | userName}}</p>
 								<p class="text-muted mb-0">{{appt.specialty.value}}</p>
 							</div>
 						</div>
