--- a/src/app/statistics/chart/chart.component.html
+++ b/src/app/statistics/chart/chart.component.html
@@ -5,8 +5,7 @@
 			[style.height]="height"
 			[type]="chartType"
 			[data]="chartData"
-			[options]="chartOptions"
-			[id]="chartId">
+			[options]="chartOptions">
 		</canvas>
 	</div>
 </div>
