--- a/src/app/statistics/stats/stats.component.html
+++ b/src/app/statistics/stats/stats.component.html
@@ -2,11 +2,11 @@
 	<div class="row row-cols-2">
 		<div class="col-md-6 mb-5">
 			<h3 class="text-center">Appointments per day</h3>
-			<app-chart height="300px" width="400px" [chartData]="chartsData[0]" [chartType]="'bar'" [chartOptions]="lineChartOptions" chartId="chart1"></app-chart>
+			<app-chart height="300px" width="400px" [chartData]="chartsData[0]" chartType="bar" [chartOptions]="lineChartOptions"></app-chart>
 		</div>
 		<div class="col-md-6 mb-5">
 			<h3 class="text-center">Appointments per specialty</h3>
-			<app-chart width="300px" [chartData]="chartsData[1]" [chartType]="'doughnut'" chartId="chart2"></app-chart>
+			<app-chart width="300px" [chartData]="chartsData[1]" chartType="doughnut"></app-chart>
 		</div>
 		<div class="col-md-6 mb-5">
 			<h3 class="text-center">Appointments between two dates</h3>
@@ -25,7 +25,7 @@
 						(click)="loadChart3()">Load</button>
 				</div>
 			</div>
-			<app-chart height="300px" width="400px" [chartData]="chartsData[2]" [chartType]="'line'" [chartOptions]="lineChartOptions" chartId="chart3"></app-chart>
+			<app-chart height="300px" width="400px" [chartData]="chartsData[2]" chartType="line" [chartOptions]="lineChartOptions"></app-chart>
 		</div>
 		<div class="col-md-6 mb-5">
 			<h3 class="text-center">Finished appointments between two dates</h3>
@@ -44,7 +44,7 @@
 						(click)="loadChart4()">Load</button>
 				</div>
 			</div>
-			<app-chart width="300px" [chartData]="chartsData[3]" [chartType]="'pie'" chartId="chart4"></app-chart>
+			<app-chart height="300px" width="400px" [chartData]="chartsData[3]" chartType="line" [chartOptions]="lineChartOptions"></app-chart>
 		</div>
 	</div>
 </div>
