--- a/src/app/statistics/chart/chart.component.html
+++ b/src/app/statistics/chart/chart.component.html
@@ -1,6 +1,6 @@
 <div class="container d-flex justify-content-center">
 	<div class="mb-1" *ngIf="chartData" style="width: auto; height: auto;">
-		<canvas baseChart
+		<canvas baseChart [id]="chartId"
 			[style.width]="width"
 			[style.height]="height"
 			[type]="chartType"
