--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,18 +4,24 @@
 		<a class="navbar-brand" routerLink="/home">La Clínica</a>
 		<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 			<li class="nav-item"><a class="nav-link" routerLink="/home">Home</a></li>
-			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role !== 'specialist' && isValid" routerLink="/new-appointment">New Appointment</a></li>
-			<li class="nav-item"><a class="nav-link" *ngIf="isValid" routerLink="/appointments">Appointments</a></li>
+			<ng-container *ngIf="user" #notLogged>
+				<li class="nav-item"><a class="nav-link" *ngIf="user.role !== 'specialist' && isValid" routerLink="/new-appointment">New Appointment</a></li>
+				<li class="nav-item"><a class="nav-link" *ngIf="isValid" routerLink="/appointments">Appointments</a></li>
+				
+				<li class="nav-item"><a class="nav-link" *ngIf="user.role === 'admin' && isEmailVerif" routerLink="/users">Users</a></li>
+				<li class="nav-item"><a class="nav-link" *ngIf="user.role === 'specialist' && isValid" routerLink="/my-patients">My Patients</a></li>
+				<li class="nav-item"><a class="nav-link" *ngIf="user.role === 'patient'" routerLink="/my-profile">My Profile</a></li>
+				<li class="nav-item"><a class="nav-link" *ngIf="user.role === 'admin' && isEmailVerif" routerLink="/stats/logs">Logs</a></li>
+				<li class="nav-item"><a class="nav-link" *ngIf="user.role === 'admin' && isEmailVerif" routerLink="/stats/charts">Logs</a></li>
+				<li class="nav-item"><a class="nav-link" *ngIf="user.role !== 'patient' && isValid" routerLink="/account">Account</a></li>
+				
+				<li class="nav-item"><a class="nav-link" *ngIf="user.role === 'specialist' && !isValid" routerLink="/specialist-enabling">Enable</a></li>
+				<li class="nav-item"><a class="nav-link" *ngIf="!isEmailVerif" routerLink="/account-verification">Verify</a></li>
+			</ng-container>
 
-			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role === 'admin' && isEmailVerif" routerLink="/users">Users</a></li>
-			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role === 'specialist' && isValid" routerLink="/my-patients">My Patients</a></li>
-			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role === 'patient'" routerLink="/my-profile">My Profile</a></li>
-			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role === 'admin' && isEmailVerif" routerLink="/charts/logs">Logs</a></li>
-			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role !== 'patient' && isValid" routerLink="/account">Account</a></li>
-
-			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role === 'specialist' && !isValid" routerLink="/specialist-enabling">Enable</a></li>
-			<li class="nav-item"><a class="nav-link" *ngIf="user && !isEmailVerif" routerLink="/account-verification">Verify</a></li>
-			<li class="nav-item"><a class="nav-link" *ngIf="!user" routerLink="/login">Login</a></li>
+			<ng-container #notLogged>
+				<li class="nav-item"><a class="nav-link" *ngIf="!user" routerLink="/login">Login</a></li>
+			</ng-container>
 		</ul>
 	</div>
 </nav>
